--- a/basic/src/App.css
+++ b/basic/src/App.css
@@ -1,3 +1,15 @@
-.orange{
-  color: orange;
+.profile {
+  width: 300px;
+  text-align: center;
+  padding: 1rem;
+  background-color: #ebebeb;
+  box-shadow: 10px 13px 37px -11px rgba(0,0,0,0.75);
+  -webkit-box-shadow: 10px 13px 37px -11px rgba(0,0,0,0.75);
+  -moz-box-shadow: 10px 13px 37px -11px rgba(0,0,0,0.75);
+  border-radius: 20px;
+}
+.photo{
+  width: 200px;
+  height: 200px;
+  border-radius: 100%;
 }
