--- a/basic/src/App.css
+++ b/basic/src/App.css
@@ -7,6 +7,7 @@
   -webkit-box-shadow: 10px 13px 37px -11px rgba(0,0,0,0.75);
   -moz-box-shadow: 10px 13px 37px -11px rgba(0,0,0,0.75);
   border-radius: 20px;
+  margin-bottom: 1rem;
 }
 .photo{
   width: 200px;
