--- a/basic/src/App.css
+++ b/basic/src/App.css
@@ -1,4 +1,5 @@
 .profile {
+  position: relative;
   width: 300px;
   text-align: center;
   padding: 1rem;
@@ -13,4 +14,14 @@
   width: 200px;
   height: 200px;
   border-radius: 100%;
+}
+.new{
+  position: absolute;
+  left: 70%;
+  top: 10%;
+  background-color: aqua;
+  padding: 0.2rem 0.5rem;
+  border-radius: 0.5rem;
+  text-transform: uppercase;
+  font-weight: bold;
 }
