Feat: add avartar

--- a/basic/src/App.css
+++ b/basic/src/App.css
@@ -15,6 +15,12 @@
   height: 200px;
   border-radius: 100%;
 }
+.avartar{
+  position: relative;
+  width: 200px;
+  height: 200px;
+  margin: auto;
+}
 .new{
   position: absolute;
   left: 70%;
