--- a/basic/src/App.css
+++ b/basic/src/App.css
@@ -33,8 +33,15 @@
 }
 
 .container {
-  display: flex;
-  justify-content: center;
+  width: 500px;
+  margin: auto;
+}
+.banner { 
+  text-align: center;
+  margin-top:  5rem;
+  font-size: 2rem;
+  background-color: gold;
+  font-weight: bold;
 }
 
 .counter { 
@@ -63,4 +70,8 @@
     rgba(215,127,12,1) 0%,
     rgba(253, 220, 29, 1) 100%
   );
+}
+.total {
+  font-size: 1rem;
+  margin-left: -1.5rem;
 }
